; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_kwset.c_treenext.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_kwset.c_treenext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree = type { i64, %struct.trie*, %struct.tree*, %struct.tree* }
%struct.trie = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tree*, %struct.trie**)* @treenext to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @treenext(%struct.tree* %0, %struct.trie** %1) #0 {
  %3 = alloca %struct.tree*, align 8
  %4 = alloca %struct.trie**, align 8
  store %struct.tree* %0, %struct.tree** %3, align 8
  store %struct.trie** %1, %struct.trie*** %4, align 8
  %5 = load %struct.tree*, %struct.tree** %3, align 8
  %6 = icmp ne %struct.tree* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %25

8:                                                ; preds = %2
  %9 = load %struct.tree*, %struct.tree** %3, align 8
  %10 = getelementptr inbounds %struct.tree, %struct.tree* %9, i32 0, i32 3
  %11 = load %struct.tree*, %struct.tree** %10, align 8
  %12 = load %struct.trie**, %struct.trie*** %4, align 8
  call void @treenext(%struct.tree* %11, %struct.trie** %12)
  %13 = load %struct.tree*, %struct.tree** %3, align 8
  %14 = getelementptr inbounds %struct.tree, %struct.tree* %13, i32 0, i32 2
  %15 = load %struct.tree*, %struct.tree** %14, align 8
  %16 = load %struct.trie**, %struct.trie*** %4, align 8
  call void @treenext(%struct.tree* %15, %struct.trie** %16)
  %17 = load %struct.tree*, %struct.tree** %3, align 8
  %18 = getelementptr inbounds %struct.tree, %struct.tree* %17, i32 0, i32 1
  %19 = load %struct.trie*, %struct.trie** %18, align 8
  %20 = load %struct.trie**, %struct.trie*** %4, align 8
  %21 = load %struct.tree*, %struct.tree** %3, align 8
  %22 = getelementptr inbounds %struct.tree, %struct.tree* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct.trie*, %struct.trie** %20, i64 %23
  store %struct.trie* %19, %struct.trie** %24, align 8
  br label %25

25:                                               ; preds = %8, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
